iac/layer-services/monitoring/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ui-ing
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    traffic-type: internal
spec:
  rules:
  - http:
      paths:
      - path: /alertmanager
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
